--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,29 +1,57 @@
 <resources>
-    <!-- Светлая тема Material3 -->
-    <color name="md_theme_light_primary">#6750A4</color>
+    <!-- Светлая тема Material3 - Серая палитра -->
+    <color name="md_theme_light_primary">#5F6368</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
-    <color name="md_theme_light_primaryContainer">#EADDFF</color>
-    <color name="md_theme_light_onPrimaryContainer">#21005D</color>
-    <color name="md_theme_light_secondary">#625B71</color>
+    <color name="md_theme_light_primaryContainer">#E8EAED</color>
+    <color name="md_theme_light_onPrimaryContainer">#1F1F1F</color>
+    <color name="md_theme_light_secondary">#70777F</color>
     <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_secondaryContainer">#E8DEF8</color>
-    <color name="md_theme_light_onSecondaryContainer">#1D192B</color>
-    <color name="md_theme_light_background">#FFFBFE</color>
-    <color name="md_theme_light_onBackground">#1C1B1F</color>
-    <color name="md_theme_light_surface">#FFFBFE</color>
-    <color name="md_theme_light_onSurface">#1C1B1F</color>
+    <color name="md_theme_light_secondaryContainer">#F1F3F4</color>
+    <color name="md_theme_light_onSecondaryContainer">#2D3134</color>
+    <color name="md_theme_light_tertiary">#5F6B7A</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#E3F0FF</color>
+    <color name="md_theme_light_onTertiaryContainer">#1C2834</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#FEFEFE</color>
+    <color name="md_theme_light_onBackground">#1A1C1E</color>
+    <color name="md_theme_light_surface">#FEFEFE</color>
+    <color name="md_theme_light_onSurface">#1A1C1E</color>
+    <color name="md_theme_light_surfaceVariant">#E1E2E1</color>
+    <color name="md_theme_light_onSurfaceVariant">#44474A</color>
+    <color name="md_theme_light_outline">#75787B</color>
+    <color name="md_theme_light_inverseOnSurface">#F1F0F4</color>
+    <color name="md_theme_light_inverseSurface">#2F3033</color>
+    <color name="md_theme_light_inversePrimary">#C2C8D0</color>
 
-    <!-- Тёмная тема Material3 -->
-    <color name="md_theme_dark_primary">#D0BCFF</color>
-    <color name="md_theme_dark_onPrimary">#381E72</color>
-    <color name="md_theme_dark_primaryContainer">#4F378B</color>
-    <color name="md_theme_dark_onPrimaryContainer">#EADDFF</color>
-    <color name="md_theme_dark_secondary">#CCC2DC</color>
-    <color name="md_theme_dark_onSecondary">#332D41</color>
-    <color name="md_theme_dark_secondaryContainer">#4A4458</color>
-    <color name="md_theme_dark_onSecondaryContainer">#E8DEF8</color>
-    <color name="md_theme_dark_background">#1C1B1F</color>
-    <color name="md_theme_dark_onBackground">#E6E1E5</color>
-    <color name="md_theme_dark_surface">#1C1B1F</color>
-    <color name="md_theme_dark_onSurface">#E6E1E5</color>
+    <!-- Тёмная тема Material3 - Серая палитра -->
+    <color name="md_theme_dark_primary">#C2C8D0</color>
+    <color name="md_theme_dark_onPrimary">#2C3135</color>
+    <color name="md_theme_dark_primaryContainer">#42474B</color>
+    <color name="md_theme_dark_onPrimaryContainer">#DEE3EA</color>
+    <color name="md_theme_dark_secondary">#C1C7CF</color>
+    <color name="md_theme_dark_onSecondary">#2C3135</color>
+    <color name="md_theme_dark_secondaryContainer">#42474B</color>
+    <color name="md_theme_dark_onSecondaryContainer">#DEE3EA</color>
+    <color name="md_theme_dark_tertiary">#B3C7DB</color>
+    <color name="md_theme_dark_onTertiary">#1E2A36</color>
+    <color name="md_theme_dark_tertiaryContainer">#34404C</color>
+    <color name="md_theme_dark_onTertiaryContainer">#CFE5FF</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#111318</color>
+    <color name="md_theme_dark_onBackground">#E2E2E6</color>
+    <color name="md_theme_dark_surface">#111318</color>
+    <color name="md_theme_dark_onSurface">#E2E2E6</color>
+    <color name="md_theme_dark_surfaceVariant">#44474A</color>
+    <color name="md_theme_dark_onSurfaceVariant">#C4C7CA</color>
+    <color name="md_theme_dark_outline">#8E9194</color>
+    <color name="md_theme_dark_inverseOnSurface">#111318</color>
+    <color name="md_theme_dark_inverseSurface">#E2E2E6</color>
+    <color name="md_theme_dark_inversePrimary">#5F6368</color>
 </resources>
