--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    
-    <!-- Основные стили виджетов должны быть определены в начале -->
-    <style name="Widget.App.Button" parent="Widget.Material3.Button.UnelevatedButton">
-        <item name="cornerRadius">20dp</item>
-        <item name="android:letterSpacing">0.01</item>
+    <style name="Widget.App.Button" parent="Widget.Material3.Button">
         <item name="android:textAllCaps">false</item>
     </style>
     
@@ -11,6 +7,14 @@
         <item name="cardCornerRadius">16dp</item>
         <item name="cardElevation">2dp</item>
         <item name="rippleColor">?attr/colorOnSurfaceVariant</item>
+    </style>
+    
+    <!-- Новый стиль для карточек в AMOLED теме -->
+    <style name="Widget.App.CardView.Amoled" parent="Widget.Material3.CardView.Elevated">
+        <item name="cardCornerRadius">16dp</item>
+        <item name="cardElevation">2dp</item>
+        <item name="rippleColor">?attr/colorOnSurfaceVariant</item>
+        <item name="cardBackgroundColor">@color/amoled_card_surface</item>
     </style>
     
     <!-- Основная светлая тема -->
