tried to fix dynamic amoled theme

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,42 @@
         <item name="cardBackgroundColor">@color/amoled_card_surface</item>
     </style>
     
+    <!-- ПРОСТОЙ AMOLED стиль для popup menu -->
+    <style name="AmoledPopupMenuOverride" parent="ThemeOverlay.Material3.Dark">
+        <item name="android:colorBackground">@color/amoled_background</item>
+        <item name="colorSurface">@color/amoled_background</item>
+        <item name="colorOnSurface">@color/amoled_on_surface</item>
+        <item name="android:textColor">@color/amoled_on_surface</item>
+        <item name="android:textColorPrimary">@color/amoled_on_surface</item>
+        <item name="android:textColorSecondary">@color/amoled_on_surface</item>
+    </style>
+    
+    <!-- AMOLED тема -->
+    <style name="Theme.App2Proxy.Amoled" parent="Theme.Material3.Dark.NoActionBar">
+        <item name="colorPrimary">@color/md_theme_dark_primary</item>
+        <item name="colorOnPrimary">@color/md_theme_dark_onPrimary</item>
+        <item name="colorPrimaryContainer">@color/md_theme_dark_primaryContainer</item>
+        <item name="colorOnPrimaryContainer">@color/md_theme_dark_onPrimaryContainer</item>
+        <item name="colorSecondary">@color/md_theme_dark_secondary</item>
+        <item name="colorOnSecondary">@color/md_theme_dark_onSecondary</item>
+        <item name="colorSecondaryContainer">@color/md_theme_dark_secondaryContainer</item>
+        <item name="colorOnSecondaryContainer">@color/md_theme_dark_onSecondaryContainer</item>
+        <item name="colorTertiary">@color/md_theme_dark_tertiary</item>
+        <item name="colorOnTertiary">@color/md_theme_dark_onTertiary</item>
+        <item name="colorTertiaryContainer">@color/md_theme_dark_tertiaryContainer</item>
+        <item name="colorOnTertiaryContainer">@color/md_theme_dark_onTertiaryContainer</item>
+        <item name="colorError">@color/md_theme_dark_error</item>
+        <item name="android:colorBackground">@color/amoled_background</item>
+        <item name="colorSurface">@color/amoled_surface</item>
+        <item name="colorOnSurface">@color/amoled_on_surface</item>
+        
+        <!-- Прозрачная строка состояния -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">false</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">false</item>
+    </style>
+    
     <!-- Основная светлая тема -->
     <style name="Theme.App2Proxy" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/md_theme_light_primary</item>
@@ -47,15 +83,9 @@
         <item name="colorPrimaryInverse">@color/md_theme_light_inversePrimary</item>
         
         <!-- Прозрачная строка состояния -->
-        <item name="android:statusBarColor" tools:targetApi="l">@android:color/transparent</item>
-        <item name="android:navigationBarColor" tools:targetApi="l">@android:color/transparent</item>
-
-        <!-- Цвет верхней панели чтобы отличался от фона -->
-        <item name="colorSurfaceContainer">#F5F5F5</item>
-        
-        <!-- Улучшенные Material 3 стили -->
-        <item name="materialButtonStyle">@style/Widget.App.Button</item>
-        <item name="materialCardViewStyle">@style/Widget.App.CardView</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="o_mr1">true</item>
     </style>
-
 </resources>
